--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,9 +10,10 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "0.111.1"
 uvicorn = "0.30.1"
-pydantic = "2.8.2"
 envparse = "0.2.0"
 motor = "3.5.1"
+pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
+pydantic-settings = "^2.3.4"
 
 
 [build-system]
