--- a/backend/app/.env.template
+++ b/backend/app/.env.template
@@ -3,7 +3,8 @@
 ###> APP
 
 ###> Databases
-APP_CONFIG__POSTGRES__URL=postgresql+asyncpg://user:pwd@localhost:5432/example_db
+APP_CONFIG__DB__URL=postgresql+asyncpg://user:pwd@localhost:5432/example_db
+APP_CONFIG__DB__ECHO=0
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD=pwd
 POSTGRES_USER=user
