--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ envparse = "0.2.0"
 motor = "3.5.1"
 pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
 pydantic-settings = "^2.3.4"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
+asyncpg = "^0.29.0"
 
 
 [build-system]
