--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
       - 5432:5432
     restart: always
     env_file:
-      - ./backend/.env
+      - backend/app/.env
     networks:
       - portfolio.network
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      - ./var/postgres/data:/var/lib/postgresql/data
 
   portfolio-mongo-db:
     image: mongo
@@ -27,7 +27,7 @@ services:
       context: .
       dockerfile: ./backend/Dockerfile
     env_file:
-      - ./backend/.env
+      - backend/app/.env
     volumes:
       - ./backend:/code/backend
     depends_on:
@@ -57,6 +57,3 @@ services:
 networks:
   portfolio.network:
     driver: bridge
-
-volumes:
-  postgres-db:
