--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,11 @@ pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
 pydantic-settings = "^2.3.4"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
 asyncpg = "^0.29.0"
+alembic = "^1.13.2"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
