--- a/backend/app/.env.template
+++ b/backend/app/.env.template
@@ -16,3 +16,7 @@ MONGODB_URL=mongodb://mongo_db/example_db
 
 ###> Env
 ENVIRONMENT=develop
+
+###> Access Token
+APP_CONFIG__ACCESS_TOKEN__RESET_PASSWORD_TOKEN_SECRET=
+APP_CONFIG__ACCESS_TOKEN__VERIFICATION_TOKEN_SECRET=
