--- a/backend/app/.env.template
+++ b/backend/app/.env.template
@@ -20,3 +20,7 @@ ENVIRONMENT=develop
 ###> Access Token
 APP_CONFIG__ACCESS_TOKEN__RESET_PASSWORD_TOKEN_SECRET=
 APP_CONFIG__ACCESS_TOKEN__VERIFICATION_TOKEN_SECRET=
+
+###> Super user
+APP_CONFIG__SUPER_USER__EMAIL=admin@admin.com
+APP_CONFIG__SUPER_USER__PASSWORD=admin
