--- a/nginx/nginx.proxy.conf
+++ b/nginx/nginx.proxy.conf
@@ -11,7 +11,7 @@ http {
     server {
         listen 80 default_server;
         location / {
-            proxy_pass http://portfolio-backend;
+            proxy_pass http://portfolio-backend:8000;
         }
     }
 }
