add mongo-db config to .env

--- a/backend/app/.env.template
+++ b/backend/app/.env.template
@@ -3,21 +3,32 @@
 ###> APP
 
 ###> Databases
-APP_CONFIG__DB__URL=postgresql+asyncpg://user:pwd@localhost:5432/example_db
+##> Postgres
+APP_CONFIG__DB__URL=postgresql+asyncpg://user:pwd@localhost:5432/postgres_db_name
 APP_CONFIG__DB__ECHO=0
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD=pwd
 POSTGRES_USER=user
-POSTGRES_DB=example_db
+POSTGRES_DB=postgres_db_name
 POSTGRES_HOST=postgres
 POSTGRES_HOSTNAME=127.0.0.1
-
-MONGODB_URL=mongodb://mongo_db/example_db
+##> Mongo
+# for localhost (uses by PyCharm)
+APP_CONFIG__MONGO__URI=mongodb://user:pwd@localhost:27017/mongo_db_name?retryWrites=true&w=majority
+# for docker (uses by Containers)
+#APP_CONFIG__MONGO__URI=mongodb://user:pwd@portfolio-mongo-db:27017/mongo_db_name?retryWrites=true&w=majority
+APP_CONFIG__MONGO__DB=mongo_db_name
+MONGO_DB_PORT=27017
+MONGO_INITDB_ROOT_USERNAME=admin-user
+MONGO_INITDB_ROOT_PASSWORD=admin-password
+MONGO_DB_PASSWORD=pwd
+MONGO_DB_USER=user
+MONGO_DB_NAME=mongo_db_name
 
 ###> Env
 ENVIRONMENT=develop
 
-###> Access Token
+###> Access Token "python -c 'import secrets; print(secrets.token_hex())'"
 APP_CONFIG__ACCESS_TOKEN__RESET_PASSWORD_TOKEN_SECRET=
 APP_CONFIG__ACCESS_TOKEN__VERIFICATION_TOKEN_SECRET=
 
