--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,13 +12,14 @@ python = "^3.12"
 fastapi = "0.111.1"
 uvicorn = "0.30.1"
 envparse = "0.2.0"
-motor = "3.5.1"
+motor = {extras = ["srv"], version = "^3.5.1"}
 pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
 pydantic-settings = "^2.3.4"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
+odmantic = "^1.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
