--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,13 +9,13 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "0.111.1"
-uvicorn = "0.30.1"
+fastapi = "0.112.0"
+uvicorn = "0.30.6"
 envparse = "0.2.0"
 motor = {extras = ["srv"], version = "^3.5.1"}
 pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
-pydantic-settings = "^2.3.4"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
+pydantic-settings = "^2.4.0"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
@@ -24,6 +24,11 @@ odmantic = "^1.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.2"
+requests = "^2.32.3"
+
 
 [build-system]
 requires = ["poetry-core"]
