--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,11 @@ black = "^24.4.2"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.2"
 requests = "^2.32.3"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.8"
+
+[tool.pytest.ini_options]
+pythonpath = "app"
 
 
 [build-system]
