--- a/backend/app/.env.template
+++ b/backend/app/.env.template
@@ -26,7 +26,7 @@ MONGO_DB_USER=user
 MONGO_DB_NAME=mongo_db_name
 
 ###> Env
-ENVIRONMENT=develop
+ENVIRONMENT=development
 
 ###> Access Token "python -c 'import secrets; print(secrets.token_hex())'"
 APP_CONFIG__ACCESS_TOKEN__RESET_PASSWORD_TOKEN_SECRET=
